test/Fail/RecordWhere2.err
RecordWhere2.agda:5.7-7.12: error: [UnsolvedMetaVariables]
Unsolved metas at the following locations:
  RecordWhere2.agda:5.7-7.12
